Added COPY, DELETE, JOIN, FIND, REPLACE, REPLACE ALL, ASSERT functionality. Moved to Java 8 compatible.